--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <nav>
             <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
             
-            <ul class="list nav-list">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+            <ul class="list">
+                <li><a href="./index.html" class="link nav-item">Студия</a></li>
+                <li><a href="./portfolio.html" class="link nav-item">Портфолио</a></li>
+                <li><a href="" class="link nav-item">Контакты</a></li>
             </ul>
         </nav>
         <ul class="list">
