--- a/index.html
+++ b/index.html
@@ -7,29 +7,31 @@
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <nav>
-            <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
-            
-            <ul class="list">
-                <li><a href="./index.html" class="link nav-item">Студия</a></li>
-                <li><a href="./portfolio.html" class="link nav-item">Портфолио</a></li>
-                <li><a href="" class="link nav-item">Контакты</a></li>
+        <div class="conteiner header-nav">
+            <nav class="nav">
+                <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
+                <ul class="nav-list list">
+                    <li class="item"><a href="./index.html" class="link nav-link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link nav-link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link nav-link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="contacts-list list">
+                <li class="item">
+                    <a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a>
+                </li>
+                <li class="item">
+                    <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
+                </li>
             </ul>
-        </nav>
-        <ul class="list">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link header-contacts">+38 096 111 11 11</a>
-            </li>
-        </ul>    
+        </div>
     </header>
     <main>
         <section class="hero">
@@ -38,87 +40,88 @@
                 Заказать услугу
             </button>
         </section>
-        <section class="features">
-            <ul class="list">
+        <section class="features section">
+            <div class="conteiner"><ul class="list">
                 <li>
                     <h3 class="features-title">Внимание к деталям</h3>
                     <p class="features-text">
-                    Идейные соображения, а также начало повседневной работы по формированию позиции.
+                        Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
                 <li>
                     <h3 class="features-title">Пунктуальность</h3>
                     <p class="features-text">
-                    Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
                     <h3 class="features-title">Планирование</h3>
                     <p class="features-text">
-                    Равным образом консультация с широким активом в значительной степени обуславливает.
+                        Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
                     <h3 class="features-title">Современные технологии</h3>
                     <p class="features-text">
-                    Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                     </p>
                 </li>
             </ul>
+        </div>
         </section>
-        <section class="work">
-            <h2 class="work-title">Чем мы занимаемся</h2>
-            <ul class="list">
-                <li>
-                    <img src="images/img1.jpg"
-                    alt="Программист работает с кодом"
-                    width="370">
-                </li>
-                <li>
-                    <img src="images/img2.jpg"
-                    alt="Дизайнер разрабатывет приложение для смартфонов"
-                    width="370">
-                </li>
-                <li>
-                    <img src="images/img3.jpg"
-                    alt="Веб-дизайнер работает с планшетом для выбора цветов"
-                    width="370">
-                </li>
-            </ul>
+        <section class="work section">
+            <div class="conteiner">
+                <h2 class="work-title">Чем мы занимаемся</h2>
+                <ul class="list">
+                    <li>
+                        <img src="images/img1.jpg" alt="Программист работает с кодом" width="370">
+                    </li>
+                    <li>
+                        <img src="images/img2.jpg" alt="Дизайнер разрабатывет приложение для смартфонов" width="370">
+                    </li>
+                    <li>
+                        <img src="images/img3.jpg" alt="Веб-дизайнер работает с планшетом для выбора цветов" width="370">
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section class="team">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="list">
-                <li>
-                    <img src="images/igor.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3 class="team-name">Игорь Демьяненко</h3>
-                    <p lang="en" class="team-text">Product Designer</p>
-                </li>
-                <li>
-                    <img src="images/olga.jpg" alt="Ольга Репина" width="270">
-                    <h3 class="team-name">Ольга Репина</h3>
-                    <p lang="en" class="team-text">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="images/nikolai.jpg" alt="Николай Тарасов" width="270">
-                    <h3 class="team-name">Николай Тарасов</h3>
-                    <p lang="en" class="team-text">Marketing</p>
-                </li>
-                <li>
-                    <img src="images/mihail.jpg" alt="Михаил Ермаков" width="270">
-                    <h3 class="team-name">Михаил Ермаков</h3>
-                    <p lang="en" class="team-text">UI Designer</p>
-                </li>
-            </ul>
+        <section class="team section">
+            <div class="conteiner">
+                <h2 class="team-title">Наша команда</h2>
+                <ul class="list">
+                    <li>
+                        <img src="images/igor.jpg" alt="Игорь Демьяненко" width="270">
+                        <h3 class="team-name">Игорь Демьяненко</h3>
+                        <p lang="en" class="team-text">Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="images/olga.jpg" alt="Ольга Репина" width="270">
+                        <h3 class="team-name">Ольга Репина</h3>
+                        <p lang="en" class="team-text">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="images/nikolai.jpg" alt="Николай Тарасов" width="270">
+                        <h3 class="team-name">Николай Тарасов</h3>
+                        <p lang="en" class="team-text">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="images/mihail.jpg" alt="Михаил Ермаков" width="270">
+                        <h3 class="team-name">Михаил Ермаков</h3>
+                        <p lang="en" class="team-text">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="logo link">Web<span class="logo-half-footer">Studio</span></a>
-        <address>
-            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a>
-        </address>
+        <div class="conteiner">
+            <a href="./index.html" class="logo no-margin link">Web<span class="logo-half-footer">Studio</span></a>
+            <address class="contacts">
+                <p class="address item">г. Киев, пр-т Леси Украинки, 26</p>
+                <a href="mailto:info@devstudio.com" class="link item footer-contact">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="link item footer-contact">+38 096 111 11 11</a>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
