--- a/portfolio.html
+++ b/portfolio.html
@@ -10,94 +10,101 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
-    
-            <ul class="list">
-                <li><a href="./index.html" class="link nav-item">Студия</a></li>
-                <li><a href="./portfolio.html" class="link nav-item">Портфолио</a></li>
-                <li><a href="" class="link nav-item">Контакты</a></li>
+        <div class="conteiner header-nav">
+            <nav class="nav">
+                <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
+                <ul class="nav-list list">
+                    <li class="item"><a href="./index.html" class="link nav-link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link nav-link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link nav-link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="contacts-list list">
+                <li class="item">
+                    <a href="mailto:info@devstudio.com" class="header-contacts link">info@devstudio.com</a>
+                </li>
+                <li class="item">
+                    <a href="tel:+380961111111" class="header-contacts link">+38 096 111 11 11</a>
+                </li>
             </ul>
-        </nav>
-        <ul class="list">
-            <li>
-                <a href="mailto:info@devstudio.com" class="link header-contacts">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="link header-contacts">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        </div>
     </header>
     <main>
-        <section class="gallery">
-            <ul class="list">
-                <li><button type="button" class="gallery-button">Все</button></li>
-                <li><button type="button" class="gallery-button">Веб-сайты</button></li>
-                <li><button type="button" class="gallery-button">Приложения</button></li>
-                <li><button type="button" class="gallery-button">Дизайн</button></li>
-                <li><button type="button" class="gallery-button">Маркетинг</button></li>
-            </ul>
-            <ul class="list">
-                <li>
-                    <img src="./images/portfolio/img1.jpg" alt="Открытый веб-сайт на ноутбуке" width="370">
-                    <h2 class="gallery-title">Технокряк</h2>
-                    <p class="gallery-text">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img2.jpg" alt="Постер к баскетбольному матчу" width="370">
-                    <h2 class="gallery-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                    <p class="gallery-text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img3.jpg" alt="Логотип ресторана" width="370">
-                    <h2 class="gallery-title">Ресторан <span lang="en">Seafood</span></h2>
-                    <p class="gallery-text">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370">
-                    <h2 class="gallery-title">Проект <span lang="en">Prime</span></h2>
-                    <p class="gallery-text">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img5.jpg" alt="Две коробки" width="370">
-                    <h2 class="gallery-title">Проект <span lang="en">Boxes</span></h2>
-                    <p class="gallery-text">Приложение</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img6.jpg" alt="Открытый веб-сайт на мониторе" width="370">
-                    <h2 class="gallery-title" lang="en">Inspiration has no Borders</h2>
-                    <p class="gallery-text">Веб-сайт</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img7.jpg" alt="Открытая книга" width="370">
-                    <h2 class="gallery-title">Издание <span lang="en">Limited Edition</span></h2>
-                    <p class="gallery-text">Дизайн</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img8.jpg" alt="Ярлык с текстом" width="370">
-                    <h2 class="gallery-title">Проект <lang lang="en">LAB</lang></h2>
-                    <p class="gallery-text">Маркетинг</p>
-                </li>
-                <li>
-                    <img src="./images/portfolio/img9.jpg" alt="Работа в приложении за ноутбуком" width="370">
-                    <h2 class="gallery-title" lang="en">Growing Business</h2>
-                    <p class="gallery-text">Приложение</p>
-                </li>
-            </ul>
+        <section class="gallery section">
+            <div class="conteiner">
+                <ul class="list">
+                    <li><button type="button" class="gallery-button">Все</button></li>
+                    <li><button type="button" class="gallery-button">Веб-сайты</button></li>
+                    <li><button type="button" class="gallery-button">Приложения</button></li>
+                    <li><button type="button" class="gallery-button">Дизайн</button></li>
+                    <li><button type="button" class="gallery-button">Маркетинг</button></li>
+                </ul>
+                <ul class="list">
+                    <li>
+                        <img src="./images/portfolio/img1.jpg" alt="Открытый веб-сайт на ноутбуке" width="370">
+                        <h2 class="gallery-title">Технокряк</h2>
+                        <p class="gallery-text">Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/portfolio/img2.jpg" alt="Постер к баскетбольному матчу" width="370">
+                        <h2 class="gallery-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                        <p class="gallery-text">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/portfolio/img3.jpg" alt="Логотип ресторана" width="370">
+                        <h2 class="gallery-title">Ресторан <span lang="en">Seafood</span></h2>
+                        <p class="gallery-text">Приложение</p>
+                    </li>
+                    <li>
+                        <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370">
+                        <h2 class="gallery-title">Проект <span lang="en">Prime</span></h2>
+                        <p class="gallery-text">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/portfolio/img5.jpg" alt="Две коробки" width="370">
+                        <h2 class="gallery-title">Проект <span lang="en">Boxes</span></h2>
+                        <p class="gallery-text">Приложение</p>
+                    </li>
+                    <li>
+                        <img src="./images/portfolio/img6.jpg" alt="Открытый веб-сайт на мониторе" width="370">
+                        <h2 class="gallery-title" lang="en">Inspiration has no Borders</h2>
+                        <p class="gallery-text">Веб-сайт</p>
+                    </li>
+                    <li>
+                        <img src="./images/portfolio/img7.jpg" alt="Открытая книга" width="370">
+                        <h2 class="gallery-title">Издание <span lang="en">Limited Edition</span></h2>
+                        <p class="gallery-text">Дизайн</p>
+                    </li>
+                    <li>
+                        <img src="./images/portfolio/img8.jpg" alt="Ярлык с текстом" width="370">
+                        <h2 class="gallery-title">Проект <lang lang="en">LAB</lang>
+                        </h2>
+                        <p class="gallery-text">Маркетинг</p>
+                    </li>
+                    <li>
+                        <img src="./images/portfolio/img9.jpg" alt="Работа в приложении за ноутбуком" width="370">
+                        <h2 class="gallery-title" lang="en">Growing Business</h2>
+                        <p class="gallery-text">Приложение</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="logo link">Web<span class="logo-half-footer">Studio</span></a>
-        <address>
-            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a>
-        </address>
+        <div class="conteiner">
+            <a href="./index.html" class="logo no-margin link">Web<span class="logo-half-footer">Studio</span></a>
+            <address class="contacts">
+                <p class="address item">г. Киев, пр-т Леси Украинки, 26</p>
+                <a href="mailto:info@devstudio.com" class="link item footer-contact">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="link item footer-contact">+38 096 111 11 11</a>
+            </address>
+        </div>
     </footer>
 </body>   
 </html>
