--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
                 Заказать услугу
             </button>
         </section>
-        <section class="features section">
-            <div class="conteiner"><ul class="list">
-                <li>
+        <section class="section">
+            <div class="conteiner"><ul class="list features-list">
+                <li class="features-item">
                     <h3 class="features-title">Внимание к деталям</h3>
                     <p class="features-text">
                         Идейные соображения, а также начало повседневной работы по формированию позиции.
                     </p>
                 </li>
-                <li>
+                <li class="features-item">
                     <h3 class="features-title">Пунктуальность</h3>
                     <p class="features-text">
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
-                <li>
+                <l class="features-item"m>
                     <h3 class="features-title">Планирование</h3>
                     <p class="features-text">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
-                </li>
-                <li>
+                </l>
+                <li class="features-item">
                     <h3 class="features-title">Современные технологии</h3>
                     <p class="features-text">
                         Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -69,17 +69,17 @@
             </ul>
         </div>
         </section>
-        <section class="work section">
+        <section class="section team-section">
             <div class="conteiner">
                 <h2 class="work-title">Чем мы занимаемся</h2>
-                <ul class="list">
-                    <li>
+                <ul class="list work-list">
+                    <li class="work-item">
                         <img src="images/img1.jpg" alt="Программист работает с кодом" width="370">
                     </li>
-                    <li>
+                    <li class="work-item">
                         <img src="images/img2.jpg" alt="Дизайнер разрабатывет приложение для смартфонов" width="370">
                     </li>
-                    <li>
+                    <li class="work-item">
                         <img src="images/img3.jpg" alt="Веб-дизайнер работает с планшетом для выбора цветов" width="370">
                     </li>
                 </ul>
@@ -88,23 +88,23 @@
         <section class="team section">
             <div class="conteiner">
                 <h2 class="team-title">Наша команда</h2>
-                <ul class="list">
-                    <li>
+                <ul class="list team-list">
+                    <li class="team-item">
                         <img src="images/igor.jpg" alt="Игорь Демьяненко" width="270">
                         <h3 class="team-name">Игорь Демьяненко</h3>
                         <p lang="en" class="team-text">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="images/olga.jpg" alt="Ольга Репина" width="270">
                         <h3 class="team-name">Ольга Репина</h3>
                         <p lang="en" class="team-text">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="images/nikolai.jpg" alt="Николай Тарасов" width="270">
                         <h3 class="team-name">Николай Тарасов</h3>
                         <p lang="en" class="team-text">Marketing</p>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="images/mihail.jpg" alt="Михаил Ермаков" width="270">
                         <h3 class="team-name">Михаил Ермаков</h3>
                         <p lang="en" class="team-text">UI Designer</p>
