--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                         Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
-                <l class="features-item"m>
+                <li class="features-item">
                     <h3 class="features-title">Планирование</h3>
                     <p class="features-text">
                         Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
-                </l>
+                </li>
                 <li class="features-item">
                     <h3 class="features-title">Современные технологии</h3>
                     <p class="features-text">
