--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header-border">
         <div class="conteiner header-nav">
             <nav class="nav">
                 <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
@@ -74,13 +74,13 @@
                 <h2 class="work-title">Чем мы занимаемся</h2>
                 <ul class="list work-list">
                     <li class="work-item">
-                        <img src="images/img1.jpg" alt="Программист работает с кодом" width="370">
+                        <img src="images/img1.jpg" alt="Программист работает с кодом" width="370" class="img-nogap">
                     </li>
                     <li class="work-item">
-                        <img src="images/img2.jpg" alt="Дизайнер разрабатывет приложение для смартфонов" width="370">
+                        <img src="images/img2.jpg" alt="Дизайнер разрабатывет приложение для смартфонов" width="370" class="img-nogap">
                     </li>
                     <li class="work-item">
-                        <img src="images/img3.jpg" alt="Веб-дизайнер работает с планшетом для выбора цветов" width="370">
+                        <img src="images/img3.jpg" alt="Веб-дизайнер работает с планшетом для выбора цветов" width="370" class="img-nogap">
                     </li>
                 </ul>
             </div>
@@ -90,22 +90,22 @@
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="list team-list">
                     <li class="team-item">
-                        <img src="images/igor.jpg" alt="Игорь Демьяненко" width="270">
+                        <img src="images/igor.jpg" alt="Игорь Демьяненко" width="270" class="img-nogap">
                         <h3 class="team-name">Игорь Демьяненко</h3>
                         <p lang="en" class="team-text">Product Designer</p>
                     </li>
                     <li class="team-item">
-                        <img src="images/olga.jpg" alt="Ольга Репина" width="270">
+                        <img src="images/olga.jpg" alt="Ольга Репина" width="270" class="img-nogap">
                         <h3 class="team-name">Ольга Репина</h3>
                         <p lang="en" class="team-text">Frontend Developer</p>
                     </li>
                     <li class="team-item">
-                        <img src="images/nikolai.jpg" alt="Николай Тарасов" width="270">
+                        <img src="images/nikolai.jpg" alt="Николай Тарасов" width="270" class="img-nogap">
                         <h3 class="team-name">Николай Тарасов</h3>
                         <p lang="en" class="team-text">Marketing</p>
                     </li>
                     <li class="team-item">
-                        <img src="images/mihail.jpg" alt="Михаил Ермаков" width="270">
+                        <img src="images/mihail.jpg" alt="Михаил Ермаков" width="270" class="img-nogap">
                         <h3 class="team-name">Михаил Ермаков</h3>
                         <p lang="en" class="team-text">UI Designer</p>
                     </li>
