--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header-border">
         <div class="conteiner header-nav">
             <nav class="nav">
                 <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
@@ -47,50 +47,67 @@
                 </ul>
                 <ul class="list gallery-list">
                     <li class="gallery-item">
-                        <img src="./images/portfolio/img1.jpg" alt="Открытый веб-сайт на ноутбуке" width="370">
-                        <h2 class="gallery-title">Технокряк</h2>
-                        <p class="gallery-text">Веб-сайт</p>
+                        <img src="./images/portfolio/img1.jpg" alt="Открытый веб-сайт на ноутбуке" width="370" class="img-nogap">
+                        <div class="item-description">
+                            <h2 class="gallery-title">Технокряк</h2>
+                            <p class="gallery-text">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
-                        <img src="./images/portfolio/img2.jpg" alt="Постер к баскетбольному матчу" width="370">
-                        <h2 class="gallery-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                        <p class="gallery-text">Дизайн</p>
+                        <img src="./images/portfolio/img2.jpg" alt="Постер к баскетбольному матчу" width="370" class="img-nogap">
+                        <div class="item-description">
+                            <h2 class="gallery-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                            <p class="gallery-text">Дизайн</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
-                        <img src="./images/portfolio/img3.jpg" alt="Логотип ресторана" width="370">
-                        <h2 class="gallery-title">Ресторан <span lang="en">Seafood</span></h2>
-                        <p class="gallery-text">Приложение</p>
+                        <img src="./images/portfolio/img3.jpg" alt="Логотип ресторана" width="370" class="img-nogap">
+                        <div class="item-description">
+                            <h2 class="gallery-title">Ресторан <span lang="en">Seafood</span></h2>
+                            <p class="gallery-text">Приложение</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
-                        <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370">
-                        <h2 class="gallery-title">Проект <span lang="en">Prime</span></h2>
-                        <p class="gallery-text">Маркетинг</p>
+                        <img src="./images/portfolio/img4.jpg" alt="Наушники" width="370" class="img-nogap">
+                        <div class="item-description">
+                            <h2 class="gallery-title">Проект <span lang="en">Prime</span></h2>
+                            <p class="gallery-text">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
-                        <img src="./images/portfolio/img5.jpg" alt="Две коробки" width="370">
-                        <h2 class="gallery-title">Проект <span lang="en">Boxes</span></h2>
-                        <p class="gallery-text">Приложение</p>
+                        <img src="./images/portfolio/img5.jpg" alt="Две коробки" width="370" class="img-nogap">
+                        <div class="item-description">
+                            <h2 class="gallery-title">Проект <span lang="en">Boxes</span></h2>
+                            <p class="gallery-text">Приложение</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
-                        <img src="./images/portfolio/img6.jpg" alt="Открытый веб-сайт на мониторе" width="370">
-                        <h2 class="gallery-title" lang="en">Inspiration has no Borders</h2>
-                        <p class="gallery-text">Веб-сайт</p>
+                        <img src="./images/portfolio/img6.jpg" alt="Открытый веб-сайт на мониторе" width="370" class="img-nogap">
+                        <div class="item-description">
+                            <h2 class="gallery-title" lang="en">Inspiration has no Borders</h2>
+                            <p class="gallery-text">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
-                        <img src="./images/portfolio/img7.jpg" alt="Открытая книга" width="370">
-                        <h2 class="gallery-title">Издание <span lang="en">Limited Edition</span></h2>
-                        <p class="gallery-text">Дизайн</p>
+                        <img src="./images/portfolio/img7.jpg" alt="Открытая книга" width="370" class="img-nogap">
+                        <div class="item-description">
+                            <h2 class="gallery-title">Издание <span lang="en">Limited Edition</span></h2>
+                            <p class="gallery-text">Дизайн</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
-                        <img src="./images/portfolio/img8.jpg" alt="Ярлык с текстом" width="370">
-                        <h2 class="gallery-title">Проект <lang lang="en">LAB</lang>
-                        </h2>
-                        <p class="gallery-text">Маркетинг</p>
+                        <img src="./images/portfolio/img8.jpg" alt="Ярлык с текстом" width="370" class="img-nogap">
+                        <div class="item-description">
+                            <h2 class="gallery-title">Проект <span lang="en">LAB</span></h2>
+                            <p class="gallery-text">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="gallery-item">
-                        <img src="./images/portfolio/img9.jpg" alt="Работа в приложении за ноутбуком" width="370">
-                        <h2 class="gallery-title" lang="en">Growing Business</h2>
-                        <p class="gallery-text">Приложение</p>
+                        <img src="./images/portfolio/img9.jpg" alt="Работа в приложении за ноутбуком" width="370" class="img-nogap">
+                        <div class="item-description">
+                            <h2 class="gallery-title" lang="en">Growing Business</h2>
+                            <p class="gallery-text">Приложение</p>
+                        </div>
                     </li>
                 </ul>
             </div>
