--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="nav">
                 <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
                 <ul class="nav-list list">
-                    <li class="item"><a href="./index.html" class="link nav-link">Студия</a></li>
+                    <li class="item"><a href="./index.html" class="link nav-link current">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link nav-link">Портфолио</a></li>
                     <li class="item"><a href="" class="link nav-link">Контакты</a></li>
                 </ul>
@@ -91,23 +91,31 @@
                 <ul class="list team-list">
                     <li class="team-item">
                         <img src="images/igor.jpg" alt="Игорь Демьяненко" width="270" class="img-nogap">
-                        <h3 class="team-name">Игорь Демьяненко</h3>
-                        <p lang="en" class="team-text">Product Designer</p>
+                        <div class="team-content">
+                            <h3 class="team-name">Игорь Демьяненко</h3>
+                            <p lang="en" class="team-text">Product Designer</p>
+                        </div>                        
                     </li>
                     <li class="team-item">
                         <img src="images/olga.jpg" alt="Ольга Репина" width="270" class="img-nogap">
-                        <h3 class="team-name">Ольга Репина</h3>
-                        <p lang="en" class="team-text">Frontend Developer</p>
+                        <div class="team-content">
+                            <h3 class="team-name">Ольга Репина</h3>
+                            <p lang="en" class="team-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="images/nikolai.jpg" alt="Николай Тарасов" width="270" class="img-nogap">
-                        <h3 class="team-name">Николай Тарасов</h3>
-                        <p lang="en" class="team-text">Marketing</p>
+                        <div class="team-content">
+                            <h3 class="team-name">Николай Тарасов</h3>
+                            <p lang="en" class="team-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
                         <img src="images/mihail.jpg" alt="Михаил Ермаков" width="270" class="img-nogap">
-                        <h3 class="team-name">Михаил Ермаков</h3>
-                        <p lang="en" class="team-text">UI Designer</p>
+                        <div class="team-content">
+                            <h3 class="team-name">Михаил Ермаков</h3>
+                            <p lang="en" class="team-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -115,11 +123,17 @@
     </main>
     <footer class="footer">
         <div class="conteiner">
-            <a href="./index.html" class="logo no-margin link">Web<span class="logo-half-footer">Studio</span></a>
+            <a href="./index.html" class="logo no-margin no-padding link">Web<span class="logo-half-footer">Studio</span></a>
             <address class="contacts">
-                <p class="address item">г. Киев, пр-т Леси Украинки, 26</p>
-                <a href="mailto:info@devstudio.com" class="link item footer-contact">info@devstudio.com</a>
-                <a href="tel:+380961111111" class="link item footer-contact">+38 096 111 11 11</a>
+                <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+                <ul class="footer-list list">
+                    <li class="item">
+                        <a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a>
+                    </li>
+                    <li class="item">
+                        <a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a>
+                    </li>
+                </ul>                
             </address>
         </div>
     </footer>
