--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                 <a href="./index.html" class="logo link">Web<span class="logo-half-header">Studio</span></a>
                 <ul class="nav-list list">
                     <li class="item"><a href="./index.html" class="link nav-link">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link nav-link">Портфолио</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link nav-link current">Портфолио</a></li>
                     <li class="item"><a href="" class="link nav-link">Контакты</a></li>
                 </ul>
             </nav>
@@ -39,7 +39,7 @@
         <section class="section">
             <div class="conteiner">
                 <ul class="list button-list">
-                    <li class="button-item"><button type="button" class="gallery-button">Все</button></li>
+                    <li class="button-item"><button type="button" class="gallery-button current">Все</button></li>
                     <li class="button-item"><button type="button" class="gallery-button">Веб-сайты</button></li>
                     <li class="button-item"><button type="button" class="gallery-button">Приложения</button></li>
                     <li class="button-item"><button type="button" class="gallery-button">Дизайн</button></li>
@@ -113,15 +113,22 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="conteiner">
-            <a href="./index.html" class="logo no-margin link">Web<span class="logo-half-footer">Studio</span></a>
-            <address class="contacts">
-                <p class="address item">г. Киев, пр-т Леси Украинки, 26</p>
-                <a href="mailto:info@devstudio.com" class="link item footer-contact">info@devstudio.com</a>
-                <a href="tel:+380961111111" class="link item footer-contact">+38 096 111 11 11</a>
-            </address>
-        </div>
-    </footer>
+<footer class="footer">
+    <div class="conteiner">
+        <a href="./index.html" class="logo no-margin no-padding link">Web<span
+                class="logo-half-footer">Studio</span></a>
+        <address class="contacts">
+            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+            <ul class="footer-list list">
+                <li class="item">
+                    <a href="mailto:info@devstudio.com" class="link footer-contacts">info@devstudio.com</a>
+                </li>
+                <li class="item">
+                    <a href="tel:+380961111111" class="link footer-contacts">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </div>
+</footer>
 </body>   
 </html>
